terraform/ecs/networking.tf
resource "aws_internet_gateway" "this" {
  vpc_id = aws_vpc.this.id
  tags = {
    Name = "Liberação de internet para a ECS"
  }
}


resource "aws_route_table" "public" {
    vpc_id = aws_vpc.this.id

    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.this.id
    }
}

resource "aws_route_table_association" "route_table_association" {
    count = "${length(aws_subnet.public)}"
    subnet_id      = "${element(aws_subnet.public.*.id, count.index)}"
    route_table_id = aws_route_table.public.id
}
